# gs-convert

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  GETTING_STARTED.md  ONGOING_TASKS.md  PALETTE_OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  PUBLISHING_GUIDE.md  QUICK_START_DEV.md  README.md  UV_SETUP_SUMMARY.md  dev-setup.sh  pyproject.toml
docs/: AWS_DEPLOYMENT_GUIDE.md  CHOOSING_QUANTIZATION_METHOD.md  PALETTE_OPTIMIZATION.md  SCALING_AND_DEPLOYMENT_OPTIONS.md  STAR_TREK_ANALYSIS_CORRECTED.md  TESTING.md  TRANSFERRING_TO_APPLE_IIGS.md  UI_OPTIONS.md  apple_iigs_image_conversion_guide.md  development_vs_distribution.md  dithering_and_median_cut_guide.md
examples/: generate_test_image.py  test_colors.3200  test_gradient.3200  test_photo.3200
gs_convert_ui/: README.md  __init__.py  app.py  config.py  utils.py
gs_convert_ui/static/css/: style.css
gs_convert_ui/static/js/: app.js
gs_convert_ui/templates/: index.html
scripts/: README.md  deploy-app.sh  provision-ec2.sh  update-app.sh
src/gs_convert/: __init__.py  cli.py  color.py  dither.py  format_writer.py  pipeline.py  quantize.py
